--- a/apps/web-frontend/index.html
+++ b/apps/web-frontend/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
     <title>LearnQuest</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   </head>
   <body>
     <div id="root"></div>
